2025-10-13T00:54:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18452073555 # 795
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-13
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 951 1430 / 963 1442
* notice: next accum: outdated-unq outdated-all / unq all: 952 1431 / 965 1445
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2025-09-29] / [2025-10-12]

2025-10-12T00:53:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18436938727 # 794
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-12
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 950 1429 / 962 1441
* notice: next accum: outdated-unq outdated-all / unq all: 951 1430 / 963 1442
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-28] / [2025-10-11]

2025-10-11T00:47:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18421848173 # 793
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-11
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 949 1428 / 961 1440
* notice: next accum: outdated-unq outdated-all / unq all: 950 1429 / 962 1441
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-27] / [2025-10-10]

2025-10-10T00:50:29Z: