@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-13T00:54:45Z",
-  "count_outdated" : 1431,
-  "uniques_outdated" : 952,
-  "count" : 1445,
-  "uniques" : 965,
+  "timestamp" : "2025-10-14T00:50:49Z",
+  "count_outdated" : 1432,
+  "uniques_outdated" : 953,
+  "count" : 1446,
+  "uniques" : 966,
   "clones" : [
-    {
-      "timestamp": "2025-09-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-01T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-10-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
