@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2025-09-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-10-01T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -56,6 +51,11 @@
       "timestamp": "2025-10-12T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-10-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
